Final Enhancements on the form

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <div class="container">
     <div class="heading">Sign In</div>
     <form action="" class="form">
+      <input required="" class="input" type="text" name="first-name" id="first-name" placeholder="First Name">
+      <input required="" class="input" type="text" name="last-name" id="last-name" placeholder="Last Name">
       <input required="" class="input" type="email" name="email" id="email" placeholder="E-mail">
       <input required="" class="input" type="password" name="password" id="password" placeholder="Password">
       <span class="forgot-password"><a href="#">Forgot Password ?</a></span>
@@ -36,7 +38,6 @@
           </button>
         </div>
       </div>
-      <span class="agreement"><a href="#">Learn user licence agreement</a></span>
   </div>
 </body>
 </html>
